@@ -1,9 +1,6 @@
-import java.io.BufferedReader;
-import java.io.FileNotFoundException;
-import java.io.FileReader;
-import java.io.IOException;
-import java.util.List;
 import java.io.*;
+import java.util.Arrays;
+import java.util.List;
 
 public class Failistlugemine {
     public static void main(String[] args) throws IOException {
@@ -12,10 +9,13 @@ public class Failistlugemine {
         );
         String rida = br.readLine();
         System.out.println(rida);
-       List<String> tykeldus = List.of(rida.split("es"));
+//        String[]
+        List<String> tykeldus = Arrays.asList(rida.split("es"));
         System.out.println(tykeldus);
         System.out.println(tykeldus.size());
         System.out.println(Math.sqrt(tykeldus.size()));
         System.out.println(Math.pow(tykeldus.size(),3));
+
+        //absoluutväärtus Math.abs --- if (number < 0) -- number *= -1
     }
 }
